--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "torch-glare",
-  "version": "1.1.15",
+  "name": "@ali_nameer/torch-glare",
+  "version": "1.1.22",
   "type": "module",
   "license": "MIT",
   "files": [
